--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -12,13 +12,25 @@
 
 <body>
 
-<div id="lateral">
+
+<div id="site">
  
+<!--- <div id="topo">topo</div> --->
+<div id="conteudo">
+ 
+<div id="lateral">
+ lateral
 </div>
 
 <div id="corpo">
- 
+ <div id="conteudo-left">REcebido</div>
+<div id="conteudo-right">originado</div>
 </div>
+
+</div>
+ 
+<!--<div id="radape">radape</div> --->
+
 
 <!----SCRIP-->
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
